--- a/src/css/input.css
+++ b/src/css/input.css
@@ -2,3 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800&family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+
+    body{
+        @apply font-Manrope text-base;
+    }
+
+    input,
+    button,
+    textarea,
+    select{
+        outline: none;
+    }
+}
+@layer components {
+    .layout-container{
+        @apply max-w-[1170px] mx-auto px-4
+    }
+}
