--- a/src/css/input.css
+++ b/src/css/input.css
@@ -20,4 +20,7 @@
     .layout-container{
         @apply max-w-[1170px] mx-auto px-4
     }
+    .card {
+        @apply px-3 py-1.5 rounded-[5px] border border-white bg-black bg-opacity-40 inline-block text-white
+    }
 }
