--- a/src/css/input.css
+++ b/src/css/input.css
@@ -40,4 +40,10 @@
         opacity: 1;
         visibility: visible;
     }
+    .owl-carousel .owl-item img {
+        width: auto;
+    }
+    .nav-link1.active {
+        @apply text-orangef8 relative after:absolute after:h-[2px] after:w-[100%] after:bg-orangef8 after:-bottom-1 after:left-0  
+    }
 }
